--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
+
 
 # testing
 /coverage
@@ -11,6 +13,7 @@
 # next.js
 /.next/
 /out/
+/.next
 
 # production
 /build
@@ -23,13 +26,23 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-.pnpm-debug.log*
 
 # local env files
-.env*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # vercel
 .vercel
 
-# typescript
+**/public/workbox-*.js
+**/public/sw.js
+**/public/service-worker.js
+
+# sitemap
+robots.txt
+sitemap*.xml
+
+# TS
 *.tsbuildinfo
