--- a/package.json
+++ b/package.json
@@ -12,11 +12,15 @@
     "@chakra-ui/react": "^1.8.7",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "@next-auth/prisma-adapter": "^1.0.3",
+    "@prisma/client": "^3.12.0",
     "framer-motion": "^6.2.9",
     "next": "12.1.4",
+    "next-auth": "^4.3.1",
     "react": "18.0.0",
     "react-dom": "18.0.0",
-    "react-icons": "^4.3.1"
+    "react-icons": "^4.3.1",
+    "react-markdown": "^8.0.2"
   },
   "devDependencies": {
     "@types/node": "17.0.23",
@@ -24,6 +28,7 @@
     "@types/react-dom": "17.0.14",
     "eslint": "8.12.0",
     "eslint-config-next": "12.1.4",
+    "prisma": "^3.12.0",
     "typescript": "4.6.3"
   }
 }
